--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,8 @@
   font-weight: 400;
 
   color: #0f0f0f;
-  background-color: #f6f6f6;
+  background-color: rgba(0, 0, 0, 0.9);
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,7 +17,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    color: #f6f6f6;
+    color: #0f0f0f;
     background-color: #2f2f2f;
   }
 }
