--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,5 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #0f0f0f;
-  background-color: rgba(0, 0, 0, 0.9);
-
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,9 +8,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #0f0f0f;
-    background-color: #2f2f2f;
-  }
+body {
+  margin: 0;
+  padding: 0;
 }
