--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,8 @@
 }
 
 body {
+  color-scheme: light dark;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -27,4 +29,5 @@ body {
   height: 100%;
 
   user-select: none;
+  cursor: default;
 }
